fix(test): align createReservationForUser_SeatPendingException_HeldByAnotherUsersCart with allowance/reservation query refactor
After rebasing onto main (which introduced the Redis-backed seat cart and SeatPendingException), this test still mocked the pre-refactor findByUser/findByEventId repository calls. ReservationService now queries findByUserAndEventId/findByEventIdAndSeatIds, so the unstubbed calls returned Optional.empty(), causing EventNotFoundException instead of SeatPendingException.